<resources>
    <string name="app_name">CoupMix</string>
    <string name="choose_language">Please Choose Your Language</string>
    <string name="English">English</string>
    <string name="Arabic">Arabic</string>
    <string name="Done">Done</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Home">Home</string>
    <string name="Category">Category</string>
    <string name="MyOrders">My Orders</string>
    <string name="AboutCoupMix">About CoupMix</string>
    <string name="NoNetworkAvailable">No network available</string>
    <string name="Categories">Categories</string>
    <string name="Search">Search</string>
    <string name="FeaturesProducts">Features Products</string>
    <string name="ShowDetails">Show Details</string>
    <string name="No">No.</string>
    <string name="CancelOrder">Cancel Order</string>
    <string name="Bookedon">Booked on</string>
    <string name="Name">Name</string>
    <string name="Address">Address</string>
    <string name="Phone">Phone</string>
    <string name="Email">Email</string>
    <string name="Notes">Notes</string>
    <string name="Location">Location</string>
    <string name="Discount">Discount :</string>
    <string name="ThanksForyourorder">Thanks For your order</string>
    <string name="BookOrderSuccess">Book Order Success</string>
    <string name="Yourorderidis">Your order id is</string>
    <string name="Pleasewriteyourname">Please, write your name</string>
    <string name="Pleasewriteyouremail">Please, write your email</string>
    <string name="Pleasewriteyourphone">Please, write your phone</string>

    <string name="Pleasewriteyournotes">Please, write your notes</string>
    <string name="Pleasefullyourinformation">Please, full your information</string>
    <string name="Checkyourinternetconnection">Check your internet connection</string>
    <string name="Invalidemail">Invalid email</string>
    <string name="Pleasewriteyouraddress">Please, write your address</string>
    <string name="OrderBook">Order Book</string>
    <string name="youcanfind">you can find best offers and can get with  best discount</string>
    <string name="Coupondetail">Coupon detail</string>
    <string name="FeaturesOffer">Features Offer</string>
    <string name="Directions">Directions</string>
    <string name="RequestOrder">Request Order</string>
    <string name="Searchbybrand">Search by brand...</string>
    <string name="Details">Details</string>
    <string name="NoDataFound">No Data Found</string>
    <string name="SearchResult">Search Result</string>
    <string name="Brand">Brand</string>
    <string name="Offers">Offers</string>
    <string name="Subscribe">Newsletter Subscribtion</string>
    <string name="YourEmail">Your Email</string>
    <string name="ThanksForyoursubscribe">Thanks For your subscribe...</string>
    <string name="subscribe">Subscribe</string>
    <string name="Gallery">Gallery</string>
    <string name="Sponsor">Sponsors</string>


</resources>
