<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#e8e8ea"
    tools:context=".fragment.OrderItemFragment">

    <!-- TODO: Update blank fragment layout -->
  <EditText
      android:layout_width="match_parent"
      android:layout_height="@dimen/_60sdp"
      android:background="#fff"
      android:layout_marginTop="@dimen/_40sdp"
      android:layout_marginLeft="@dimen/_25sdp"
      android:layout_marginRight="@dimen/_25sdp"
      android:hint="@string/Name"
      android:paddingBottom="10sp"
      android:paddingLeft="@dimen/_14sdp"
      android:textColorHint="#000"
      android:paddingTop="@dimen/_8sdp"
      android:textStyle="bold"
     />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="#fff"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:hint="@string/Address"
        android:paddingBottom="10sp"
        android:paddingLeft="@dimen/_14sdp"
        android:textColorHint="#000"
        android:paddingTop="@dimen/_8sdp"
        android:textStyle="bold"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="#fff"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:hint="@string/Phone"
        android:paddingBottom="10sp"
        android:paddingLeft="@dimen/_14sdp"
        android:textColorHint="#000"
        android:paddingTop="@dimen/_8sdp"
        android:textStyle="bold"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="#fff"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:hint="@string/Email"
        android:paddingBottom="10sp"
        android:paddingLeft="@dimen/_14sdp"
        android:textColorHint="#000"
        android:paddingTop="@dimen/_8sdp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/order_item_notes"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_75sdp"
        android:background="#fff"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:hint="@string/Notes"
        android:paddingBottom="10sp"
        android:paddingLeft="@dimen/_14sdp"
        android:textColorHint="#000"
        android:paddingTop="@dimen/_8sdp"
        android:textStyle="bold"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/Order"
        android:textColor="#fff"
        android:textSize="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@drawable/button"
        android:layout_below="@+id/order_item_notes"
        android:id="@+id/lang_done_btn"
        />

</LinearLayout>