<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".activity.LanguageActivity">
    <ImageView
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_140sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:src="@drawable/icon_language"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/choose_language"
        android:id="@+id/lang_choose_language"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_195sdp"
        android:textStyle="normal"
        android:textSize="@dimen/_15sdp"
        />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_below="@+id/lang_choose_language"
        android:id="@+id/main_card_view">
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:text="@string/English"
        android:checked="false"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_below="@+id/lang_choose_language"
        android:id="@+id/lang_checkbox_english"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/Arabic"
            android:checked="false"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:id="@+id/lang_checkbox_arabic"/>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/lang_done_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_card_view"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="182dp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@drawable/button"
        android:text="@string/Done"
        android:textColor="#fff"
        android:textSize="@dimen/_15sdp" />

</RelativeLayout>