<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e8e6e9"
    tools:context=".fragment.SubscribeFragment">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:id="@+id/subscribe_toolbar"
        android:background="#07aba7">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- <ImageView
                 android:id="@+id/order_item_image_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/back_white"/>-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="@dimen/_15sdp"
                android:text="@string/Subscribe"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/subscribe_your_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/YourEmail"
        android:textColor="#6e6a6a"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_165sdp"
       android:layout_marginStart="@dimen/_10sdp"
        />
    <EditText
        android:id="@+id/subscribe_edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_below="@+id/subscribe_your_email"
        android:layout_marginStart="@dimen/_13sdp"
        android:layout_marginEnd="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/edit_text"
        android:hint="@string/Email"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        />

    <Button
        android:id="@+id/subscribe_btn_subscribe"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/button"
        android:layout_marginLeft="@dimen/_13sdp"
        android:layout_marginRight="@dimen/_13sdp"
        android:layout_below="@+id/subscribe_edit_text_email"
        android:text="@string/subscribe"
        android:layout_marginTop="@dimen/_175sdp"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:textSize="@dimen/_14sdp"
        />
</RelativeLayout>